# memory-manage

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
hooks/: extract.py  recall.py  settings-snippet.json
memmgr/: __init__.py  cli.py  config.py  gitbackup.py  index.py  lifecycle.py  ops.py  retrieval.py  status.py  store.py
panel/: app.py
